Icon List - Fixed: Icon Vertical Alignment was not working when link is added

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -372,7 +372,7 @@ div[class*=' pa-'] {
     text-align: center; }
   .pp-list-container .pp-list-items a {
     display: inherit;
-    align-items: center; }
+    align-items: inherit; }
 
 .pp-list-items.pp-inline-items {
   display: flex;
